# Exam-mgt-system

./: pyproject.toml
src/: main.py  seed.py
src/util/: config.py  db.py  exception.py  redis_client.py  response.py
src/v1/auth/: routes.py  schema.py  service.py
src/v1/base/: schema.py
src/v1/controllers/: courses.py  user.py  util.py
src/v1/model/: __init__.py  courses.py  user.py
src/v1/schema/: courses.py  user.py
src/v1/service/: courses.py  user.py
