[project]
name = "exam-mgt-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.123.7",
    "redis[async]>=7.1.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
]
